Fix primary Anchor icon alignment.

--- a/src/scss/grommet-core/_objects.anchor.scss
+++ b/src/scss/grommet-core/_objects.anchor.scss
@@ -47,6 +47,7 @@
   text-decoration: none;
 
   .control-icon {
+    vertical-align: middle;
     margin-right: halve($inuit-base-spacing-unit);
 
     html.rtl & {
